duniverse/menhirLib.20200211/test/static/bad/use-index-not-id.mly
%start<int> a
%token A
%%

a: x = A { $1 }
