duniverse/menhirLib.20200211/test/static/bad/use-index-not-id.exp
File "use-index-not-id.mly", line 5, characters 11-13:
Error: please do not say: $1. Instead, say: x.
